uploading analysis of Titanic dataset

--- a/04_titanic/main.Rmd
+++ b/04_titanic/main.Rmd
@@ -4,17 +4,18 @@ output: html_notebook
 ---
 ```{r}
 source("process.r")
-head(df_titanic, 5)
 ```
 ```{r}
-head(df_titanic_st, 5)
+head(df_titanic, 10)
+print(df_titanic_st)
+head(df_titanic_st2, 10)
 ```
 
 ```{r}
-ggplot(data = df_titanic_st, aes(x = class, y = n_pasenger, fill = survived)) +
-  geom_bar(stat = "identity", color = "white", alpha = 0.8) +
-  theme_minimal() +
-  labs(x = 'Categoría de pasaje', y = 'Cantidad de personas', title = "Estadística breve de sobrevivientes del Titanic") +
-  theme(legend.position = "right")
+p1
+p2
 ```
 
+```{r warning=FALSE}
+p3
+```
