--- a/10_complaints-project/main.Rmd
+++ b/10_complaints-project/main.Rmd
@@ -6,6 +6,9 @@ output: html_notebook
 
 ```{r}
 source("core.R")
+```
+
+```{r}
 str(df_original)
 str(df_copy)
 str(df_ordenado)
@@ -15,10 +18,21 @@ str(df_top_10)
 ```
 
 
-
 ```{r}
 p1
 p2
 p3
+p4
+```
+
+```{r}
+ggplot(data = subset(df_max, !is.na(tema)), aes(x = tema,
+                                y = tfinalizacion,
+                                color = tema)) +
+  geom_point() +
+  labs(x = "Tema", y = "Días de Finalización (t>300)") +
+  ggtitle("Gráfico de puntos: Tema vs. Días de Finalización") +
+  theme(legend.position="none")
+
 ```
 
